gccida/g1/dump_node
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1228:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1229:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1231:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1237:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1244:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1337:22: error: expected expression
v12 = *( tree_node **)( v6 + 72); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1337:10: error: use of undeclared identifier 'tree_node'
v12 = *( tree_node **)( v6 + 72); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1341:22: error: expected expression
v13 = *( tree_node **)( v6 + 120); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1341:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( v6 + 120); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1342:35: error: expected expression
if ( v13 && v13 != *( tree_node **)( v6 + 72) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1342:23: error: use of undeclared identifier 'tree_node'
if ( v13 && v13 != *( tree_node **)( v6 + 72) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1348:22: error: expected expression
v13 = *( tree_node **)( v6 + 120); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1348:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( v6 + 120); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1367:22: error: expected expression
v28 = *( tree_node **)v6; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1367:10: error: use of undeclared identifier 'tree_node'
v28 = *( tree_node **)v6; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1372:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v14 = lang_hooks_0.tree_dump.type_quals( ( tree)v6); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1372:40: error: called object type '<dependent type>' is not a function or function pointer
v14 = lang_hooks_0.tree_dump.type_quals( ( tree)v6); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1384:22: error: expected expression
v15 = *( tree_node **)( v6 + 128); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/tree-dump.c:1384:10: error: use of undeclared identifier 'tree_node'
v15 = *( tree_node **)( v6 + 128); 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_node/src/obj/tree-dump.o] Error 1
